# diffusion-models-evolution

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: demo.py  gradio_app.py
config/: default.py
configs/: __init__.py  base.py  detection.py  generation.py
models/: __init__.py  memory_utils.py  pipeline_factory.py  prompt_bank.py
notebooks/: 01_diffusion_fundamentals.ipynb  02_architecture_evolution.ipynb  03_flow_matching.ipynb  04_sd3_medium_demo.ipynb  05_flux_schnell_demo.ipynb  06_visual_comparison.ipynb
scripts/: benchmark.py  compare.py  download_data.py  evaluate.py  generate.py  generate_synthetic.py  launch_app.py  launch_demo.py  train_detector.py
src/data/: convert.py  download.py  inspect.py  split.py
src/detection/: compare.py  evaluate.py  predict.py  trainer.py
src/generation/: edge_extraction.py  generate.py  pipeline.py  postprocess.py  prompt_bank.py
src/utils/: device.py  logger.py  memory.py  visualization.py
tests/: conftest.py  test_config.py  test_configs.py  test_data_convert.py  test_edge_extraction.py  test_memory.py  test_memory_utils.py  test_prompt_bank.py
