[project]
name = "pcb-defect-diffusion"
version = "1.0.0"
description = "PCB Defect Detection with Diffusion-Powered Data Augmentation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gabriel Pecoraro"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
